[package]
name = "meterm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
metacontrols-server = { git = "https://github.com/Masterchef365/meterm.git", branch = "main" }
egui_extras = { git = "https://github.com/Masterchef365/egui.git", branch = "no-usize-in-interface" }
egui_demo_lib = { git = "https://github.com/Masterchef365/egui.git", branch = "no-usize-in-interface" }
