[package]
name = "meterm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
#meterm-server = { path = "../meterm/server" }
meterm-server = { git = "https://github.com/Masterchef365/meterm.git", branch = "main" }
egui_extras = { git = "https://github.com/Masterchef365/egui.git", branch = "meterm2" }
egui_demo_lib = { git = "https://github.com/Masterchef365/egui.git", branch = "meterm2" }
env_logger = "0.11.3"
